--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "notiondata",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "Notion API for NodeJS Package",
-  "main": "index.js",
+  "main": "index",
+  "typings": "index",
   "scripts": {
     "test": "awesome"
   },
